# opencl

./: README.md
C C++/Book - OPENCL IN ACTION/Ch1/matvec/: matvec  matvec.c
C C++/Book - OPENCL IN ACTION/Ch2/context_count/: context_count
C C++/Book - OPENCL IN ACTION/Ch2/device_extensions_test/: device_ext_test  device_ext_test.c
C C++/Book - OPENCL IN ACTION/Ch2/kernel_search/: kernel_search
C C++/Book - OPENCL IN ACTION/Ch2/platform_extensions_test/: platform_ext_test  platform_ext_test.c
C C++/Book - OPENCL IN ACTION/Ch2/program_build/: program_build
C C++/Book - OPENCL IN ACTION/Ch4/double_test/: double_test
C C++/Book - OPENCL IN ACTION/Ch4/float_config/: float_config
C C++/Book - OPENCL IN ACTION/Ch4/hello_kernel/: hello_kernel
C C++/Book - OPENCL IN ACTION/Ch4/vector_widths/: vector_widths
C C++/Book - OPENCL IN ACTION/Ch6/interp/: interp
C C++/Book - OPENCL IN ACTION/Ch6/simple_image/: Makefile  Sobre Formato Image  simple_image  simple_image.c  simple_image.cl
C C++/Book - OPENCL IN ACTION/Ch8/buffer_test/: buffer_test.cpp
C C++/Book - OPENCL IN ACTION/Ch8/callback/: callback.cpp
C C++/Book - OPENCL IN ACTION/Ch8/create_kernels/: create_kernels.cpp
C C++/Book - OPENCL IN ACTION/Ch8/full_context/: Makefile  full_context  full_context.cpp
C C++/OpenCLcpp/DeviceQuery/: Makefile  clDeviceQuery  clInfoTest.cpp
C C++/OpenCLcpp/MultMat/: CLUtil.hpp  Makefile  MatrixMulDouble  MatrixMulDouble.cpp
C C++/OpenCLcpp/SDK/: BaseCL.cpp  CmdArgsParserCL.cpp  CommandArgsCL.cpp  CommandQueueCL.cpp  Configure.h  ContextCL.cpp  DeviceCL.cpp  ErrorCL.cpp  Image2DCL.cpp  KernelCL.cpp  LogCL.cpp  Main  Main.cpp  Makefile  PlatformCL.cpp  SDKDeviceInfo.h  SDKOpencl.cpp  TimerCL.cpp  clInfoTest.h  log.txt
C C++/OpenCLcpp/SDK/kernels/: imageReverse.cl  sepiaToning.cl  sobel_filter.cl
C C++/OpenCLcpp/Sobel/: Makefile  SobelFilterImage  SobelFilterImage.cpp  SobelFilterImage.hpp  SobelFilterImage_Kernels.cl
C C++/OpenCLcpp/callback/: Makefile  blank.cl  callback  callback.cpp
C C++/OpenCLcpp/clinfo/: Makefile  clInfo  clInfo.cpp
C C++/OpenCLcpp/create_kernels/: Makefile  create_kernels  create_kernels.cpp
C C++/OpenCLcpp/hello_kernel/: Makefile  hello  hello.cpp  hello_kernel.cl
C C++/OpenCLcpp/info_all_devices/: Makefile  full_context  full_context.cpp
C C++/OpenCLcpp/matvec/: Makefile  matvec  matvec.cl  matvec.cpp
C C++/OpenCLcpp/simple_image/: Makefile  simple_image  simple_image.cl  simple_image.cpp
C C++/OpenCLcpp/threeLoops/: Makefile  threeLoops  threeLoops.cl  threeLoops.cpp
C C++/gaussian_blur_opencl/: gauss.cl
Itk/itkGPUAniso/src/: CMakeLists.txt  Configure.h
Itk/itkGPUBinaryThresholdImageFilterTest/src/: CMakeLists.txt  itkGPUBinaryThresholdImageFilterTest.cxx
Itk/itkGPUDiscreteGaussianImageFilterTestNotWOrk/src/: CMakeLists.txt  itkGPUDiscreteGaussianImageFilterTest.cxx
Itk/itkGPUGradientAnisotropicDiffusionImageFilterTest/src/: CMakeLists.txt  itkGPUGradientAnisotropicDiffusionImageFilterTest.cxx
Itk/itkGPUImageTest/src/: CMakeLists.txt  FindOpenCL.cmake  itkGPUImageTest (cópia).cxx  itkGPUImageTest.cxx
Itk/itkGPUInverseImage/src/: CMakeLists.txt  itkGPUInverseImage.cl  itkGPUInverseImage.cxx
Itk/itkGPUInverseImageFilter/src/: GPUMeanImageFilter.cl  UtilCL.h  itkGPUMeanImageFilter.cxx
Itk/itkGPUMeanImageFilter/src/: GPUMeanImageFilter.cl  itkGPUMeanImageFilter.cxx
Itk/itkGPUMeanImageFilter2/src/: CMakeLists.txt  itkGPUMeanImageFilter.cxx
Itk/itkGPUMeanImageFilter3/src/: itkGPUMeanImageFilter.cxx
Itk/itkGPUMeanImageFilter4/src/: itkGPUMeanImageFilter.cxx
Itk/itkGPUMeanImageFilter5/src/: itkGPUMeanImageFilter.cxx
Itk/itkGPUMeanImageFilterTest/src/: CMakeLists.txt  GPUMeanImageFilter.cl  itkGPUMeanImageFilterTest.cxx  itkGPUMyMeanImageFilter.h  itkGPUMyMeanImageFilter.hxx
Itk/itkGPUMeanImageFilterTest2/src/: GPUMeanImageFilter.cl  itkGPUMeanImageFilterTest.cxx
Itk/itkGPUNeighborhoodOperatorImageFilterTest/src/: CMakeLists.txt  GPUNeighborhoodOperatorImageFilter.cl  itkGPUMyNeighborhoodOperatorImageFilter.h  itkGPUMyNeighborhoodOperatorImageFilter.hxx  itkGPUNeighborhoodOperatorImageFilterTest.cxx
Itk/itkGPUReductionTest/src/: CMakeLists.txt  itkGPUReductionTest.cxx
Itk/itkGPUSmoothing/src/: CMakeLists.txt  itkGPUSmoothing.cxx
Itk/itkGPUSobel/src/: CMakeLists.txt  itkGPUSobel.cxx
Slicer/AnisotropicClassic/: CMakeLists.txt
Slicer/AnisotropicClassic/AnisotropicClassic/: Anisotropic (cópia).cl  Anisotropic.cl  AnisotropicClassic (cópia).cxx  AnisotropicClassic.cxx  AnisotropicClassic.xml  CMakeLists.txt  Configure.h  LogCL.cpp  README  UtilCL.h
Slicer/DilateErodeOpencl/: CMakeLists.txt
Slicer/DilateErodeOpencl/DilateErode/: CMakeLists.txt  DilateErode.cxx  DilateErode.xml  GPUBinaryDilateImageFilter.cl  GPUBinaryErodeImageFilter.cl  README  UtilCL.h
Slicer/MeanFilterOpencl/: CMakeLists.txt
Slicer/MeanFilterOpencl/MeanFilter/: CMakeLists.txt  MeanFilter (cópia).cxx  MeanFilter.cl  MeanFilter.cxx  MeanFilter.xml
Slicer/MeanFilterOpencl/MeanFilter/KernelsMeanFilter/: MeanFilter3x3.cl  MeanFilterAbordagemSDK.cl  ModifiedImage3x3.txt  OriginalImage3x3.txt
Slicer/SobelFilterOpenCL/: CMakeLists.txt
Slicer/SobelFilterOpenCL/SobelFilterOpenCL/: CMakeLists.txt  Configure.h  SobelFilter (cópia).cl  SobelFilter.cl  SobelFilterOpenCL (cópia).cxx  SobelFilterOpenCL.cxx  SobelFilterOpenCL.xml  UtilCL.h  itkOpenCLUtil.h
